--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     }
     
     button{
-      color:white;
-      border-radius:25px;
-      background: red;
-      width:70px;
-      height:50px;
+      color:cyan;
+      border-radius:30px;
+      background:blueviolet;
+      width:85px;
+      height:65px;
       font-family:'Courier New';
     }
     
     h1{
       font-family: 'Courier New';
-      font-size:33px;
-      color:red;
+      font-size:35px;
+      color:blueviolet;
     }
 
   </style>
